--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "movie-app",
+  "version": "1.0.0",
+  "description": "A movie app",
+  "scripts": {
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "build": "react-scripts build"
+  },
   "dependencies": {
     "axios": "^1.4.0",
     "react-router-dom": "^6.14.0"
